네이버 서치어드바이저 인증태그 index 추가

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="keywords" content="나이 계산기, 만 나이, 띠 확인, 공휴일, 손없는날, 양력음력변환, 디데이, 어르신, 시니어">
     <meta name="author" content="시니어 계산 도우미">
 
+    <!-- Naver Site Verification -->
+    <meta name="naver-site-verification" content="aa46899cbea57d459943ae4ffba6824d7a683cb9" />
+
     <!-- Canonical URL -->
     <link rel="canonical" href="https://woong.io.kr/">
 
